--- a/ui/sections/storage/inspectors/available-disks.reel/available-disks.html
+++ b/ui/sections/storage/inspectors/available-disks.reel/available-disks.html
@@ -23,7 +23,7 @@
             },
             "bindings": {
                 "status" : {"<-": "@owner.disks.length ? 'default' : 'error' "},
-                "message": {"<-": "status == 'default' ? 'Drag disks to the left': 'No available disks'"}
+                "message": {"<-": "@owner.disks.length ? 'Drag disks to the left': 'No available disks'"}
             }
         },
         "hddsCategory": {
