--- a/ui/controls/search-groups.reel/search-groups.html
+++ b/ui/controls/search-groups.reel/search-groups.html
@@ -19,7 +19,11 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.value"},
-                "label": {"<-": "@owner.label"}
+                "displayedValue": {"<-": "@owner.displayedValue"},
+                "label": {"<-": "@owner.label"},
+                "disabled": {"<-": "@owner.disabled"},
+                "isLoading": {"<-": "@owner.isLoading"},
+                "validationPath": {"<-": "@owner.validationPath"}
             }
         }
     }
