--- a/ui/controls/search-users.reel/search-users.html
+++ b/ui/controls/search-users.reel/search-users.html
@@ -18,7 +18,11 @@
             },
             "bindings": {
                 "value": {"<->": "@owner.value"},
-                "label": {"<-": "@owner.label"}
+                "label": {"<-": "@owner.label"},
+                "disabled": {"<-": "@owner.disabled"},
+                "isLoading": {"<-": "@owner.isLoading"},
+                "displayedValue": {"<-": "@owner.displayedValue"},
+                "validationPath": {"<-": "@owner.validationPath"}
             }
         }
     }
