Fix a bunch of regressions related to the users/groups selection refactor.

--- a/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
+++ b/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
@@ -36,7 +36,9 @@
             "prototype": "ui/controls/search-users.reel",
             "properties": {
                 "element": {"#": "user"},
-                "label": "User"
+                "label": "User",
+                "labelPath": "username",
+                "valuePath": "username"
             },
             "bindings": {
                 "value": {"<->": "@owner.object.0.user"}
