makes tasks list take up available height, changes sideboard toggle to blue-shark button

--- a/ui/dashboard/sideboard.reel/sideboard.html
+++ b/ui/dashboard/sideboard.reel/sideboard.html
@@ -14,7 +14,7 @@
         },
 
         "toggleSideboard": {
-            "prototype": "montage/ui/button.reel",
+            "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "toggleSideboard"}
             }
@@ -63,7 +63,7 @@
             </div>
 
             <div data-montage-id="widget-dropzone" class="Sideboard-widgets"></div>
-            <div data-montage-id="toggleSideboard" class="Sideboard-toggleSideboard">
+            <div data-montage-id="toggleSideboard" class="Sideboard-toggleSideboard Button--naked Button--icon">
                 <svg><use xlink:href="#i-arrow"/></svg>
             </div>
         </div>
