Make sure the search users/groups is a loading state when getting its data.

--- a/ui/controls/search-groups.reel/search-groups.html
+++ b/ui/controls/search-groups.reel/search-groups.html
@@ -23,6 +23,7 @@
                 "label": {"<-": "@owner.label"},
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
+                "initalOptions": {"<-": "@owner.initalOptions"},
                 "validationPath": {"<-": "@owner.validationPath"}
             }
         }
