--- a/ui/controls/search-users.reel/search-users.html
+++ b/ui/controls/search-users.reel/search-users.html
@@ -22,6 +22,7 @@
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
                 "displayedValue": {"<-": "@owner.displayedValue"},
+                "initalOptions": {"<-": "@owner.initalOptions"},
                 "validationPath": {"<-": "@owner.validationPath"}
             }
         }
