Stop, Snapshot, and Start again, a tale of a snapshotted running vm and various fixes to the vm section.
Ticket: #21394

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -389,7 +389,7 @@
                 "path": "clones"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!!@owner.object.parent || @owner.object._isNew"}
+                "classList.has('hide')": {"<-": "!!@owner.object.parent || @owner.object._isNew || !@owner.object._datastore.capabilities.clones"}
             }
         },
         "snapshots": {
@@ -401,7 +401,7 @@
                 "path": "snapshots"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "@owner.object._isNew"}
+                "classList.has('hide')": {"<-": "@owner.object._isNew || !@owner.object._datastore.capabilities.snapshots"}
             }
         },
         "start": {
