Fix typo and display initial options.

--- a/ui/controls/search-groups.reel/search-groups.html
+++ b/ui/controls/search-groups.reel/search-groups.html
@@ -23,7 +23,7 @@
                 "label": {"<-": "@owner.label"},
                 "disabled": {"<-": "@owner.disabled"},
                 "isLoading": {"<-": "@owner.isLoading"},
-                "initalOptions": {"<-": "@owner.initalOptions"},
+                "initialOptions": {"<-": "@owner.initialOptions"},
                 "validationPath": {"<-": "@owner.validationPath"}
             }
         }
