UPDATED: template version property name

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -329,7 +329,7 @@
                 "element": {"#": "guestVmTemplate"}
             },
             "bindings": {
-                "value": {"<-": "!@owner.object.guestInfo.template ? 'Not detected' : 'Available'"}
+                "value": {"<-": "!@owner.object.template.template_version ? 'Not detected' : 'Available'"}
             }        
         },
         "guestInfoLoadAvg": {
