replications as first-class objects

--- a/ui/inspectors/calendar-task.reel/calendar-task.html
+++ b/ui/inspectors/calendar-task.reel/calendar-task.html
@@ -18,7 +18,7 @@
                     "volume.scrub": "scrub",
                     "disk.parallel_test": "smart",
                     "calendar_task.command": "cron",
-                    "replication.replicate_dataset": "replication",
+                    "replication.sync": "replication",
                     "rsync.copy": "rsync"
                 }
             },
