UPDATED: storage/create Ambiguous Profile Terminology

--- a/ui/controls/topologizer.reel/topologizer.html
+++ b/ui/controls/topologizer.reel/topologizer.html
@@ -66,14 +66,14 @@
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "speedLabel"},
-                "value": "Speed"
+                "value": "Performance"
             }
         },
         "storageLabel": {
             "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "storageLabel"},
-                "value": "Storage"
+                "value": "Capacity"
             }
         },
         "redundancyLabel": {
