--- a/ui/controls/tree-view.reel/tree-view.html
+++ b/ui/controls/tree-view.reel/tree-view.html
@@ -12,6 +12,7 @@
             "bindings": {
                 "entry": {"<-": "@owner.controller.entry"},
                 "type": {"<-": "@owner.controller.type"},
+                "selectedEntry": {"<-": "@currentNode.selectedEntry"},
                 "classList.has('is-disabled')": {"<-": "@owner.disabled"}
             }
         },
